--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -31,7 +31,7 @@ jobs:
         uses: repo-sync/github-sync@v2
         with:
           source_repo: "https://github.com/apache/activemq.git"
-          source_branch: "master"
+          source_branch: "main"
           destination_branch: "remotemaster"
           github_token: ${{ secrets.PAT }}
       - name: checkout to remotemaster
