--- a/.github/workflows/branchTest.yml
+++ b/.github/workflows/branchTest.yml
@@ -8,9 +8,11 @@ on:
   push:
     branches:
       - master
+      - upstream-activemq*
   pull_request:
     branches:
       - master
+      - upstream-activemq*
 
     # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
