--- a/.github/workflows/branchTest.yml
+++ b/.github/workflows/branchTest.yml
@@ -7,12 +7,12 @@ name: local branch testing workflow
 on:
   push:
     branches:
-      - master
-      - upstream-activemq*
+      - 'master'
+      - 'upstream-activemq*'
   pull_request:
     branches:
-      - master
-      - upstream-activemq*
+      - 'master'
+      - 'upstream-activemq*'
 
     # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
