--- a/.github/workflows/branchTest.yml
+++ b/.github/workflows/branchTest.yml
@@ -18,7 +18,7 @@ on:
 jobs:
   setup_build_test:
     runs-on: self-hosted
-    timeout-minutes: 12 * 60
+    timeout-minutes: 720
     steps:
       - run: |
           echo "Branch to run: ${{ github.event.inputs.branchName }}"
