--- a/.github/workflows/onPullRequest.yml
+++ b/.github/workflows/onPullRequest.yml
@@ -15,6 +15,10 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ matrix.branch }}
+      - run: |
+          echo ${{ github.ref_name }}
+          git merge --strategy-option theirs ${{ github.ref_name }}
+          git diff
 
       - name: Set up JDK 11
         uses: actions/setup-java@v3
