--- a/.github/workflows/onPullRequest.yml
+++ b/.github/workflows/onPullRequest.yml
@@ -12,12 +12,16 @@ jobs:
         branch: [ 'feature/replica_broker', 'activemq-5.17.3.crdr' ]
 
     steps:
+      - run: |
+          sudo apt-get install git -y
+          git config  --global user.name "GitHub Actions Bot" && git config --global user.email "<>"
       - uses: actions/checkout@v3
         with:
           ref: ${{ matrix.branch }}
       - run: |
-          echo ${{ github.ref_name }}
-          git merge --strategy-option theirs ${{ github.ref_name }}
+          echo "github.event.pull_request.head: ${{ github.event.pull_request.head }}"
+          echo "github.event.pull_request.head.ref: ${{ github.event.pull_request.head.ref }}"
+          git merge --strategy-option theirs ${{ github.event.pull_request.head.ref }}
           git diff
 
       - name: Set up JDK 11
