--- a/.github/workflows/onPullRequest.yml
+++ b/.github/workflows/onPullRequest.yml
@@ -18,8 +18,8 @@ jobs:
       - run: |
           echo "github.event.pull_request.head: ${{ github.event.pull_request.head }}"
           echo "github.event.pull_request.head.ref: ${{ github.event.pull_request.head.ref }}"
-          git merge --strategy-option theirs origin/${{ github.event.pull_request.head.ref }}
-          git diff
+          /usr/bin/git merge --strategy-option theirs refs/remotes/origin/${{ github.event.pull_request.head.ref }}
+          /usr/bin/git diff
 
       - name: Set up JDK 11
         uses: actions/setup-java@v3
@@ -71,7 +71,7 @@ jobs:
           distribution: 'corretto'
           cache: maven
       - name: run full tests
-        run: mvn -s .github/maven-settings.xml -B -e -fae test -Dsurefire.rerunFailingTestsCount=3
+        run: false && mvn -s .github/maven-settings.xml -B -e -fae test -Dsurefire.rerunFailingTestsCount=3
 
   verify_with_Rat:
     runs-on: self-hosted
