--- a/.github/workflows/onPullRequest.yml
+++ b/.github/workflows/onPullRequest.yml
@@ -18,8 +18,8 @@ jobs:
       - run: |
           echo "github.event.pull_request.head: ${{ github.event.pull_request.head }}"
           echo "github.event.pull_request.head.ref: ${{ github.event.pull_request.head.ref }}"
-          /usr/bin/git merge --no-edit --strategy-option theirs refs/remotes/origin/${{ github.event.pull_request.head.ref }} || ture
-          /usr/bin/git || true
+          /usr/bin/git merge --no-edit --strategy-option theirs refs/remotes/origin/${{ github.event.pull_request.head.ref }} || true
+          /usr/bin/git fetch || true
           /usr/bin/git rebase origin/${{ github.event.pull_request.head.ref }} 
           /usr/bin/git diff
 
