--- a/.github/workflows/onPullRequest.yml
+++ b/.github/workflows/onPullRequest.yml
@@ -19,9 +19,8 @@ jobs:
           echo "github.event.pull_request.head: ${{ github.event.pull_request.head }}"
           echo "github.event.pull_request.head.ref: ${{ github.event.pull_request.head.ref }}"
           /usr/bin/git fetch || true
-          /usr/bin/git merge --no-edit --strategy-option theirs refs/remotes/origin/${{ github.event.pull_request.head.ref }} || true
-          /usr/bin/git rebase -Xtheirs origin/${{ github.event.pull_request.head.ref }} 
-          /usr/bin/git diff
+          /usr/bin/git merge --no-edit --strategy-option theirs origin/${{ github.event.pull_request.head.ref }} || true
+          /usr/bin/git log
 
       - name: Set up JDK 11
         uses: actions/setup-java@v3
