--- a/.github/workflows/onPullRequest.yml
+++ b/.github/workflows/onPullRequest.yml
@@ -19,15 +19,13 @@ jobs:
           echo "github.event.pull_request.head: ${{ github.event.pull_request.head }}"
           echo "github.event.pull_request.head.ref: ${{ github.event.pull_request.head.ref }}"
           /usr/bin/git fetch || true
-          /usr/bin/git merge --no-edit --strategy-option theirs origin/${{ github.event.pull_request.head.ref }} || true
-          /usr/bin/git log
+          /usr/bin/git merge --no-edit --strategy-option theirs origin/${{ github.event.pull_request.head.ref }} --allow-unrelated-histories
 
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
+      - name: Set up JDK 11 and maven
+        uses: s4u/setup-maven-action@v1.7.0
         with:
-          java-version: '11'
-          distribution: 'corretto'
-          cache: maven
+          java-version: 11
+          maven-version: 3.9.1
       - name: Build with Maven
         run: mvn -s .github/maven-settings.xml -U -B -e clean install -DskipTests
 
@@ -44,12 +42,11 @@ jobs:
         with:
           ref: ${{ matrix.branch }}
 
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
+      - name: Set up JDK 11 and maven
+        uses: s4u/setup-maven-action@v1.7.0
         with:
-          java-version: '11'
-          distribution: 'corretto'
-          cache: maven
+          java-version: 11
+          maven-version: 3.9.1
       - name: run plugin integration tests
         run: mvn -s .github/maven-settings.xml -B -e -fae '-Dtest=org.apache.activemq.broker.replica.*Test' test
 
@@ -65,12 +62,11 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ matrix.branch }}
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
+      - name: Set up JDK 11 and maven
+        uses: s4u/setup-maven-action@v1.7.0
         with:
-          java-version: '11'
-          distribution: 'corretto'
-          cache: maven
+          java-version: 11
+          maven-version: 3.9.1
       - name: run full tests
         run: false && mvn -s .github/maven-settings.xml -B -e -fae test -Dsurefire.rerunFailingTestsCount=3
 
@@ -85,11 +81,10 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ matrix.branch }}
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
+      - name: Set up JDK 11 and maven
+        uses: s4u/setup-maven-action@v1.7.0
         with:
-          java-version: '11'
-          distribution: 'corretto'
-          cache: maven
+          java-version: 11
+          maven-version: 3.9.1
       - name: Running apache-rat:check
         run: mvn apache-rat:check
