--- a/.github/workflows/onPullRequest.yml
+++ b/.github/workflows/onPullRequest.yml
@@ -21,13 +21,20 @@ jobs:
           /usr/bin/git fetch || true
           /usr/bin/git merge --no-edit --strategy-option theirs origin/${{ github.event.pull_request.head.ref }} --allow-unrelated-histories
 
-      - name: Set up JDK 11 and maven
-        uses: s4u/setup-maven-action@v1.7.0
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
         with:
-          java-version: 11
-          maven-version: 3.9.0
+          java-version: '11'
+          distribution: 'corretto'
+          cache: maven
+      - name: Set up Maven
+        uses: s4u/setup-maven-action@v1.0.0
+        with:
+          maven-version: '3.9.0'
       - name: Build with Maven
-        run: mvn -s .github/maven-settings.xml -U -B -e clean install -DskipTests
+        run: |
+          mvn -v
+          mvn -s .github/maven-settings.xml -U -B -e clean install -DskipTests
 
   replication_plugin_integration_tests:
     name: Run replication plugin integration tests on new changes
@@ -42,11 +49,12 @@ jobs:
         with:
           ref: ${{ matrix.branch }}
 
-      - name: Set up JDK 11 and maven
-        uses: s4u/setup-maven-action@v1.7.0
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
         with:
-          java-version: 11
-          maven-version: 3.9.0
+          java-version: '11'
+          distribution: 'corretto'
+          cache: maven
       - name: run plugin integration tests
         run: mvn -s .github/maven-settings.xml -B -e -fae '-Dtest=org.apache.activemq.broker.replica.*Test' test
 
@@ -62,11 +70,12 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ matrix.branch }}
-      - name: Set up JDK 11 and maven
-        uses: s4u/setup-maven-action@v1.7.0
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
         with:
-          java-version: 11
-          maven-version: 3.9.0
+          java-version: '11'
+          distribution: 'corretto'
+          cache: maven
       - name: run full tests
         run: false && mvn -s .github/maven-settings.xml -B -e -fae test -Dsurefire.rerunFailingTestsCount=3
 
@@ -81,10 +90,11 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ matrix.branch }}
-      - name: Set up JDK 11 and maven
-        uses: s4u/setup-maven-action@v1.7.0
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
         with:
-          java-version: 11
-          maven-version: 3.9.0
+          java-version: '11'
+          distribution: 'corretto'
+          cache: maven
       - name: Running apache-rat:check
         run: mvn apache-rat:check
