--- a/.github/workflows/onPullRequest.yml
+++ b/.github/workflows/onPullRequest.yml
@@ -28,9 +28,9 @@ jobs:
           distribution: 'corretto'
           cache: maven
       - name: Set up Maven
-        uses: s4u/setup-maven-action@v1.0.0
+        uses: stCarolas/setup-maven@v4.5
         with:
-          maven-version: '3.9.0'
+          maven-version: 3.8.2
       - name: Build with Maven
         run: |
           mvn -v
