--- a/.github/workflows/onPullRequest.yml
+++ b/.github/workflows/onPullRequest.yml
@@ -76,6 +76,10 @@ jobs:
           java-version: '11'
           distribution: 'corretto'
           cache: maven
+      - name: Set up Maven
+        uses: s4u/setup-maven-action@v1.0.0
+        with:
+          maven-version: '3.9.0'
       - name: run full tests
         run: false && mvn -s .github/maven-settings.xml -B -e -fae test -Dsurefire.rerunFailingTestsCount=3
 
