--- a/.github/workflows/onPush.yml
+++ b/.github/workflows/onPush.yml
@@ -31,9 +31,9 @@ jobs:
           export TARGET_BRANCH=$(basename ${{ github.ref }})
           /usr/bin/git fetch || true
           /usr/bin/git diff ${{ matrix.branch }}..origin/$TARGET_BRANCH > ${{ matrix.branch }}-diff.patch
-          /usr/bin/git apply --reject --whitespace=fix ${{ matrix.branch }}-diff.patch
+          /usr/bin/git apply --reject --whitespace=fix --exclude=.github* ${{ matrix.branch }}-diff.patch
           rm ${{ matrix.branch }}-diff.patch
+          /usr/bin/git status
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: "auto commit to ${{ matrix.branch }} from master branch"
-          branch: ${{ matrix.branch }}
