--- a/.github/workflows/onPush.yml
+++ b/.github/workflows/onPush.yml
@@ -30,9 +30,10 @@ jobs:
           echo "::set-output name=branch::$(basename ${{ github.ref }})"
           export TARGET_BRANCH=$(basename ${{ github.ref }})
           /usr/bin/git fetch || true
-          /usr/bin/git diff ${{ matrix.branch }}..origin/$TARGET_BRANCH > ${{ matrix.branch }}-diff.patch
-          /usr/bin/git apply --reject --whitespace=fix --exclude=.github* ${{ matrix.branch }}-diff.patch
-          rm ${{ matrix.branch }}-diff.patch
+          export SYNC_COMMIT_SHA=$(cat ci.env)
+          /usr/bin/git cherry-pick -n  --strategy=recursive -X theirs $SYNC_COMMIT_SHA^..HEAD
+          /usr/bin/git rev-parse origin/master > ci.env
+          /usr/bin/git rm --cached -r .github
           /usr/bin/git status
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
