update ci script

--- a/.github/workflows/onPush.yml
+++ b/.github/workflows/onPush.yml
@@ -31,8 +31,9 @@ jobs:
           export TARGET_BRANCH=$(basename ${{ github.ref }})
           /usr/bin/git fetch || true
           export SYNC_COMMIT_SHA=$(cat ci.env)
-          /usr/bin/git cherry-pick -n  --strategy=recursive -X theirs $SYNC_COMMIT_SHA^..HEAD
-          /usr/bin/git rev-parse origin/master > ci.env
+          export REMOTE_HEAD=$(/usr/bin/git rev-parse origin/master)
+          /usr/bin/git cherry-pick -n  --strategy=recursive -X theirs $SYNC_COMMIT_SHA^..$REMOTE_HEAD
+          echo $REMOTE_HEAD > ci.env
           /usr/bin/git rm --cached -r .github
           /usr/bin/git status
       - uses: stefanzweifel/git-auto-commit-action@v4
