--- a/.github/workflows/onPush.yml
+++ b/.github/workflows/onPush.yml
@@ -26,16 +26,24 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ matrix.branch }}
+      - name: read in sync sha from ${{ matrix.branch }}
+        run: |
+          echo "SYNC_SHA=$(cat ci.env)" >> $GITHUB_OUTPUT
+      - uses: actions/checkout@v3
+      - name: generating diff from base ${{ github.ref }}
+        run: |
+          /usr/bin/git diff ${{ steps.vars.outputs.SYNC_SHA }}..HEAD > ${{ matrix.branch }}-diff.patch
+      - uses: actions/checkout@v3
+        with:
+          ref: ${{ matrix.branch }}
       - run: |
           echo "::set-output name=branch::$(basename ${{ github.ref }})"
           export TARGET_BRANCH=$(basename ${{ github.ref }})
           /usr/bin/git fetch || true
-          export SYNC_COMMIT_SHA=$(cat ci.env)
           export REMOTE_HEAD=$(/usr/bin/git rev-parse origin/master)
-          /usr/bin/git cherry-pick -n  --strategy=recursive -X theirs $SYNC_COMMIT_SHA^..$REMOTE_HEAD
-          /usr/bin/git cherry-pick --skip || true
           echo $REMOTE_HEAD > ci.env
-          /usr/bin/git rm --cached -r .github
+          /usr/bin/git apply --reject --whitespace=fix --exclude=.github* ${{ matrix.branch }}-diff.patch
+          rm ${{ matrix.branch }}-diff.patch
           /usr/bin/git status
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
