--- a/.github/workflows/onPush.yml
+++ b/.github/workflows/onPush.yml
@@ -31,10 +31,11 @@ jobs:
         run: |
           echo "SYNC_SHA=$(cat ci.env)" >> $GITHUB_OUTPUT
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - name: generating diff from base ${{ github.ref }}
         run: |
           /usr/bin/git fetch || true
-          /usr/bin/git checkout origin/master
           /usr/bin/git log
           export REMOTE_HEAD=$(/usr/bin/git rev-parse origin/master)
           echo "sync_data output is ${{ steps.sync_data.outputs.SYNC_SHA }}"
