--- a/.github/workflows/onPush.yml
+++ b/.github/workflows/onPush.yml
@@ -36,7 +36,7 @@ jobs:
       - name: generating diff from base ${{ github.ref }}
         run: |
           /usr/bin/git fetch || true
-          /usr/bin/git log
+          /usr/bin/git log -n 10
           export REMOTE_HEAD=$(/usr/bin/git rev-parse origin/master)
           echo "sync_data output is ${{ steps.sync_data.outputs.SYNC_SHA }}"
           /usr/bin/git diff ${{ steps.sync_data.outputs.SYNC_SHA }}..$REMOTE_HEAD > ${{ matrix.branch }}-diff.patch
