--- a/.github/workflows/onPush.yml
+++ b/.github/workflows/onPush.yml
@@ -36,19 +36,17 @@ jobs:
       - name: generating diff from base ${{ github.ref }}
         run: |
           /usr/bin/git fetch || true
-          /usr/bin/git log -n 10
           export REMOTE_HEAD=$(/usr/bin/git rev-parse origin/master)
-          echo "sync_data output is ${{ steps.sync_data.outputs.SYNC_SHA }}"
-          /usr/bin/git diff ${{ steps.sync_data.outputs.SYNC_SHA }}..$REMOTE_HEAD > ${{ matrix.branch }}-diff.patch
-          /usr/bin/git rm --cache ${{ matrix.branch }}-diff.patch || true
-          /usr/bin/git checkout origin ${{ matrix.branch }}
+          /usr/bin/git diff ${{ steps.sync_data.outputs.SYNC_SHA }}..$REMOTE_HEAD > /tmp/${{ matrix.branch }}-diff.patch
+      - uses: actions/checkout@v3
+        with:
+          ref: ${{ matrix.branch }}
       - run: |
           echo "::set-output name=branch::$(basename ${{ github.ref }})"
           export TARGET_BRANCH=$(basename ${{ github.ref }})
           export REMOTE_HEAD=$(/usr/bin/git rev-parse origin/master)
           echo $REMOTE_HEAD > ci.env
-          /usr/bin/git apply --reject --whitespace=fix --exclude=.github* ${{ matrix.branch }}-diff.patch
-          rm ${{ matrix.branch }}-diff.patch
+          /usr/bin/git apply --reject --whitespace=fix --exclude=.github* /tmp/${{ matrix.branch }}-diff.patch
           /usr/bin/git status
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
